# Neural-Networks-From-Scratch-in-CPP-

./: .gitignore  CMakeLists.txt  README.md  classification_neural_network.cpp  commonIncludes.h  dense_layer.cpp  dropout_layer.cpp  forward_pass_neural_network.cpp  helper_functions.cpp  matplotlibcpp.h  regression_model.cpp  run_my_app.bat  test_datasets.cpp  testing_datasets.cpp
A Real Dataset/: CMakeLists.txt  fashion_mnist.parms  get_dataset.cpp  get_set_params.cpp  loading_and_testing_params.cpp  main.cpp  predictions.cpp  save_and_load.cpp
Layers/: dense_layer.cpp  dropout_layer.cpp
Neural-Networks-From-Scratch-in-C-/: binary_logistic_regression.cpp  bt.bat  common_includes.h  forward_pass_neural_network.cpp  random_parameters.cpp
Neural-Networks-From-Scratch-in-C-/Layers/: dense_layer.h  dropout_layer.h
Neural-Networks-From-Scratch-in-C-/accuracy/: categorical_accuracy.h  regression_accuracy.h
Neural-Networks-From-Scratch-in-C-/datasets/: sine.cpp  (+3 more)
Neural-Networks-From-Scratch-in-CPP/: binary_logistic_regression.cpp  classification_neural_network.cpp  common_includes.h  forward_pass_neural_network.cpp  random_parameters.cpp  regression_model.cpp  testing_datasets.cpp
accuracy/: categorical.cpp
activation_functions/: ReLU.cpp  Sigmoid.cpp  softmax.cpp
classifier/: softmax_classifier.cpp
datasets/: spiral.cpp
loss_functions/: binary_cross_entropy.cpp  categorical_cross_entropy.cpp  loss.cpp
math_operations/: numpy_operations.cpp  tempCodeRunnerFile.cpp
optimizer/: adaptive_moment_estimation.cpp
optimizers/: stochastic_gradient_descent.cpp
(+30 files in other folders)
